# vovo-finance-protocol

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  test-wallet.txt
VovoSolana/: Anchor.toml  Cargo.toml  package-lock.json  package.json  test-keypair.json  wallet.info.txt
VovoSolana/programs/VovoSolana/: Cargo.toml
VovoSolana/programs/VovoSolana/src/: amm_instruction.rs  lib.rs  utils.rs
VovoSolana/tests/: VovoSolana.js  VovoSolana.ts  devnet-test.ts  helpers.ts  mainnet-test-create.ts  mainnet-test-deposit.ts  mainnet-test-earn.ts  mainnet-test-ids.ts  mainnet-test-poke.ts  mainnet-test-withdraw.ts  mercurial_state.ts  test_ts.ts
VovoSolana/tests/mercurial/: buffer-layout.d.ts  index.ts  state.ts
anchor-vault/: .gitignore  Anchor.toml  Cargo.toml  LICENSE  package-lock.json  package.json  test-wallet.txt
anchor-vault/app/: app.js
anchor-vault/migrations/: deploy.js
anchor-vault/programs/vovo/: Cargo.toml
anchor-vault/programs/vovo/src/: lib.rs  utils_mercurial.rs
anchor-vault/tests/: vovo.js
app/: app.js
contract/: Anchor.toml
contract/programs/principal-protected-vault/: Cargo.toml
libs/audaces-perps/: LICENSE
libs/audaces-perps/js/: .eslintrc.json  README.md  package.json  tsconfig.json
libs/raydium-instruction/: Cargo.toml
libs/raydium-instruction/src/: amm_instruction.rs
libs/stable-swap-n-pool-instructions/js/: .gitignore  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.esm.json
libs/stable-swap-n-pool-instructions/program/: README.md
migrations/: deploy.js
programs/VovoSolana/: Cargo.toml
programs/VovoSolana/src/: lib.rs  utils.rs
programs/audaces-perps/: .gitignore  README.md
programs/audaces-perps/assets/: vAMM.drawio
programs/audaces-perps/cranker/: Cargo.toml
programs/audaces-perps/js/: README.md
programs/audaces-perps/program/: .gitignore  Cargo.toml
programs/stable-swap-n-pool-instructions/js/: tsconfig.base.json  url.ts
programs/stable-swap-n-pool-instructions/program/: Cargo.toml
programs/vovo/: Cargo.toml
programs/vovo/src/: lib.rs
rust/vovo/program/: Cargo.toml
rust/vovo/program/src/: lib.rs  (+6 more)
tests/: VovoSolana.ts
vovo/: Anchor.toml
vovo-vault/: Anchor.toml  Cargo.toml  LICENSE  package-lock.json  package.json  test-wallet.json
vovo-vault/app/: app.js
vovo-vault/migrations/: deploy.js
vovo-vault/programs/vovo/: Cargo.toml
vovo-vault/tests/: mercurial_state.js  vovo.js
vovo/programs/VovoSolana/: Cargo.toml
(+96 files in other folders)
